Correct white space above full page map previews
The added white space above only looks good if a vertical card is
present.

--- a/themes/mukurtu_v4/css/leaflet-overrides.css
+++ b/themes/mukurtu_v4/css/leaflet-overrides.css
@@ -1,5 +1,9 @@
 .leaflet-popup-content {
-  margin-block-start: var(--v-space-3xs);
+  font-weight: 500;
+
+  &:has(.vertical-card) {
+    margin-block-start: var(--v-space-3xs);
+  }
 
   & .vertical-card {
     margin-block-end: 0px;
